# Dackspile

./: CMakeLists.txt
config/: Macros.cmake
desktop/: CMakeLists.txt
src/desktop/: CMakeLists.txt  qt5.cmake
src/desktop/scene/: canvasview.cpp  canvasview.h
src/desktop/widgets/: KisAngleGauge.cpp
